--- a/may1522/src/App.css
+++ b/may1522/src/App.css
@@ -1,13 +1,17 @@
-.App{
-  width:100%;
-  height:100%;
+.App {
+  width: 100%;
+  height: 100%;
 }
-.App ,.Box1,.Box2,.Box3,.Box4{
-  display:flex;
 
+.App, .box1, .box2, .box3, .box4 {
+  display: flex;
   text-align: center;
   justify-content: center;
   align-items: center;
   vertical-align: center
 }
 
+.box3 {
+  flex-direction: column;
+  justify-content: space-evenly;
+}
