--- a/may1522/src/AppQuiz.css
+++ b/may1522/src/AppQuiz.css
@@ -1,9 +1,9 @@
-.App {
+html, body, .App {
   width: 100%;
   height: 100%;
 }
 
-.App, .box1, .box2, .box3, .box4 {
+.App {
   display: flex;
   text-align: center;
   justify-content: center;
@@ -11,8 +11,10 @@
   vertical-align: center
 }
 
-.box3 {
-  flex-direction: column;
-  justify-content: space-evenly;
+.AppQuiz {
+  display: inline-block;
+  border: 1px solid #000;
+  width: 400px;
+  height: 200px;
+  margin-left:40px;
 }
-
